package(default_visibility = ["//visibility:public"])

cc_library(
    name = "elevation_mapping_headers",
    hdrs = [
        "include/elevation_mapping/ElevationMapFunctors.hpp",
        "include/elevation_mapping/ThreadSafeDataWrapper.hpp",
        "include/elevation_mapping/WeightedEmpiricalCumulativeDistributionFunction.hpp",
    ],
    strip_include_prefix = "include",
)

cc_library(
    name = "sensor_processors",
    srcs = glob(["src/sensor_processors/*.cpp"]),
    hdrs = glob(["include/elevation_mapping/sensor_processors/*.hpp"]),
    strip_include_prefix = "include",
    deps = [
        ":elevation_mapping_headers",
        ":point_xyzrgb_confidence_ratio",
        "@drake//:drake_shared_library",
        "@eigen",
    ],
)

cc_library(
    name = "robot_motion_map_updater",
    srcs = ["src/RobotMotionMapUpdater.cpp"],
    hdrs = ["include/elevation_mapping/RobotMotionMapUpdater.hpp"],
    strip_include_prefix = "include",
    deps = [
        ":elevation_map",
        "@eigen",
    ],
)

cc_library(
    name = "point_xyzrgb_confidence_ratio",
    srcs = ["src/PointXYZRGBConfidenceRatio.cpp"],
    hdrs = ["include/elevation_mapping/PointXYZRGBConfidenceRatio.hpp"],
    strip_include_prefix = "include",
    deps = [
        "@pcl//:common",
        "@pcl//:filters",
    ],
)

cc_library(
    name = "elevation_map",
    srcs = ["src/ElevationMap.cpp"],
    hdrs = ["include/elevation_mapping/ElevationMap.hpp"],
    strip_include_prefix = "include",
    deps = [
        ":elevation_mapping_headers",
        ":point_xyzrgb_confidence_ratio",
        "@boost//:thread",
        "@drake//:drake_shared_library",
        "@grid_map//grid_map_core",
        "@pcl//:common",
        "@pcl//:filters",
    ],
)
